Change search button color to improve user exp.

--- a/partials/schedule.today.html
+++ b/partials/schedule.today.html
@@ -7,7 +7,7 @@
 					<div class="input-group" ng-class="{'has-error': datepickerForm.date.$invalid}">
 						<input id="dateQuery" type="text" class="form-control" ng-model="ctrl.queryDate" bs-datepicker>
 						<span class="input-group-btn">
-                       		<button type="button" class="btn btn-default" data-ng-click="properties.today = [];ctrl.getTodaySchedule()"><span class="glyphicon glyphicon-search"></span>
+                       		<button type="button" class="btn btn-success" data-ng-click="properties.today = [];ctrl.getTodaySchedule()"><span class="glyphicon glyphicon-search"></span>
 						</button>
 						</span>
 					</div>
