Fix the fact that next semester schedules are showing in this semester myschedule view and fix the broken filter functionality

--- a/partials/schedule.sub-shifts.html
+++ b/partials/schedule.sub-shifts.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
 <!-- 	<pre class="pre-scrollable">
 		{{arrays.weeks | json}}
-	</pre>
- -->
+	</pre> -->
+
 	<div class="row">
 		<div class="col-md-2">
 			<div class="panel panel-info">
