--- a/partials/schedule.schedule.html
+++ b/partials/schedule.schedule.html
@@ -13,10 +13,10 @@
                 <div class="panel-body">
                     <ul class="nav nav-pills nav-justified" bs-navbar>
                         <li data-match-route="/main/schedule/schedule/this-semester">
-                            <a ui-sref="main.schedule.schedule.this-semester">{{properties.semester.ShiftGroup.Description}}</a>
+                            <a ui-sref="main.schedule.schedule.this-semester">{{properties.currentSemester.ShiftGroup.Description}}</a>
                         </li>
                         <li data-match-route="/main/schedule/schedule/next-semester">
-                            <a ui-sref="main.schedule.schedule.next-semester">{{properties.semester.NextShiftGroup.Description}}</a>
+                            <a ui-sref="main.schedule.schedule.next-semester">{{properties.nextSemester.ShiftGroup.Description}}</a>
                         </li>
                     </ul>
                 </div>
