--- a/partials/schedule.schedule.html
+++ b/partials/schedule.schedule.html
@@ -2,7 +2,7 @@
 <!--     <div class="row">
         <pre class="pre-scrollable">{{properties.semester | json}}</pre>
     </div> -->
-    <div class="row">
+    <div class="row-fluid top-buffer">
         <div class="col-md-2">
             <div class="panel panel-info">
                 <div class="panel-heading">
