--- a/partials/schedule.schedule.this-semester.html
+++ b/partials/schedule.schedule.this-semester.html
@@ -9,16 +9,18 @@
         <div class="panel-body">
             <div class='list-group' data-ng-style="{'width': (100/filtered.length + '%'), 'float': 'left'}" data-ng-repeat="shift in filtered = (day.shifts | filter:{position: primaryPosition.Position}) | orderBy:'startTime'">
                 <a class="list-group-item list-group-item-info">
-							{{shift.startTime | date:'h:mm a'}} to {{shift.endTime | date:'h:mm a'}}
-						</a>
+                            {{shift.startTime | date:'h:mm a'}} to {{shift.endTime | date:'h:mm a'}}
+                        </a>
                 <a href="" class="list-group-item list-group-item-success" data-ng-hide="employee.Id === 0" data-ng-repeat="employee in shift.employees" data-animation="am-fade-and-scale" data-placement="center" data-template="partials/schedule.remove-employee.html" bs-modal="modal">
                     <div>
-                        <img data-ng-src="{{employee.Picture}}" class="list-item img-circle">
+                        <img data-ng-src="{{employee.Picture}}" fallback-src="/media/missing.png" class="list-item img-circle" data-template="partials/schedule.employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
+                        <!-- <img data-ng-src="{{employee.Picture}}" class="list-item img-circle"> -->
                     </div>
                     {{employee.FirstName}} {{employee.LastName}}
                 </a>
                 <a href="" class="list-group-item list-group-item-danger" data-ng-show="employee.Id === 0" data-ng-repeat="employee in shift.employees" data-animation="am-fade-and-scale" data-placement="center" data-template="partials/schedule.add-employee.html" bs-modal="modal">
                     <div>
+                        <!-- <img data-ng-src="{{employee.Picture}}" fallback-src="/media/missing.png" class="list-item img-circle" data-template="partials/schedule.employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip"> -->
                         <img data-ng-src="{{employee.Picture}}" class="list-item img-circle">
                     </div>
                     {{employee.FirstName}} {{employee.LastName}}
