--- a/partials/schedule.today.html
+++ b/partials/schedule.today.html
@@ -63,7 +63,7 @@
                                 <img data-ng-src="{{employee.employeePicture}}" fallback-src="/media/missing.png" class="list-item img-circle" data-template="partials/schedule.today.employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
                                 <!-- <img data-ng-src="{{employee.employeePicture}}" fallback-src="/media/missing.png" class="list-item img-circle"> -->
                             </div>
-                            {{employee.original.PreferredName}} {{employee.original.LastName}}
+                            {{employee.employeePreferredName}} {{employee.employeeLastName}}
                         </div>
                     </div>
                 </div>
