Fix search functionality for Faculty Testing Info

--- a/partials/directory.html
+++ b/partials/directory.html
@@ -1,7 +1,7 @@
 <div data-ng-app="Scheduler">
 	<div class="container-fluid">
 		<div class="row hidden-xs hidden-md hidden-sm">
-			<ul class="nav nav-pills nav-justified" bs-navbar>
+			<ul class="nav nav-pillsCustom nav-justified" bs-navbar>
 				<li data-match-route="/main/directory/gridView">
 					<a ui-sref="main.directory.gridView">Grid View</a>
 				</li>
