Start the new message feature and switch for a hotfix

--- a/partials/utilities.html
+++ b/partials/utilities.html
@@ -1,4 +1,9 @@
 <div data-ng-app="Utilities" class="container" data-ng-controller="UtilitiesCtrl as ctrl">
+<div class="row">
+    <pre class="pre-scrollable">
+        {{arrays.testEmployees | json}}
+    </pre>
+</div>
     <div class="row">
         <div class="col-md-6 col-sm-6">
             <div class="panel panel-default">
