--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,14 @@ body {
 	/*background-image: url('/media/christmas.jpg');*/
 	/*background-repeat: no-repeat;
 	background-size: 100%;*/
-	
+
 	background-color: #056cb6;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#0463a9), to(#056cb6));
 	background-image: -webkit-linear-gradient(top, #0463a9 0, #056cb6 100%);
 	background-image: -o-linear-gradient(top, #0463a9 0, #056cb6 100%);
 	background-image: linear-gradient(to bottom, #0463a9 0, #056cb6 100%);
 	/*filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#0463a9', endColorstr='#056cb6', GradientType=0);*/
-	
+
 	font-size: 20px;
 }
 .bs-docs-header h1 {
@@ -59,6 +59,7 @@ body {
 .nav-pillsCustom > li.active > a, .nav-pillsCustom > li.active > a:hover, .nav-pillsCustom > li.active > a:focus {
 	color: #fff;
 	/*background-image: url('/media/christmas.jpg');*/
+
 	background-color: #056cb6;
 }
 .nav-pillsCustom > li > a {
@@ -172,4 +173,76 @@ div.aside-header {
 }
 button.taken {
 	background-color: #fe9e37;
+}
+.vertical-center {
+	min-height: 100%;
+	/* Fallback for browsers do NOT support vh unit */
+
+	min-height: 100vh;
+	/* These two lines are counted as one :-)       */
+
+	display: flex;
+	align-items: center;
+}
+#loading-bar-spinner {
+	display: block;
+	/*position: fixed;*/
+
+	z-index: 10002;
+	min-height: 100%;
+	/* Fallback for browsers do NOT support vh unit */
+
+	min-height: 100vh;
+	/* These two lines are counted as one :-)       */
+
+	display: flex;
+	align-items: center;
+	text-align: center;
+}
+#loading-bar-spinner .spinner-icon {
+	width: 30px;
+	height: 30px;
+	border: solid 2px transparent;
+	border-top-color: #29d;
+	border-left-color: #29d;
+	border-radius: 15px;
+	margin: auto;
+	position: fixed;
+	z-index: 999;
+	overflow: show;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	text-align: center;
+	-webkit-animation: loading-bar-spinner 400ms linear infinite;
+	-moz-animation: loading-bar-spinner 400ms linear infinite;
+	-ms-animation: loading-bar-spinner 400ms linear infinite;
+	-o-animation: loading-bar-spinner 400ms linear infinite;
+	animation: loading-bar-spinner 400ms linear infinite;
+}
+
+.alert.top-right:nth-child(3) {
+  top: 100px;
+}
+.alert.top-right:nth-child(4) {
+  top: 200px;
+}
+.alert.top-right:nth-child(0) {
+  top: 300px;
+}
+.alert.top-right:nth-child(6) {
+  top: 400px;
+}
+.alert.top-right:nth-child(7) {
+  top: 500px;
+}
+.alert.top-right:nth-child(8) {
+  top: 600px;
+}
+.alert.top-right:nth-child(9) {
+  top: 700px;
+}
+.alert.top-right:nth-child(10) {
+  top: 800px;
 }
