Add filter and refresh directives

--- a/partials/directive-partials/available-shifts.html
+++ b/partials/directive-partials/available-shifts.html
@@ -50,10 +50,10 @@
 				</td>
 				<td ng-show="properties.currentUser.employeeInfo.Position.Position === 'FTE' || properties.currentUser.employeeInfo.Position.Position === 'HR' || properties.currentUser.employeeInfo.Position.Position === 'Admin'">
 					<div class="btn-group btn-group-sm">
-						<button class="btn btn-default" data-animation="am-fade-and-scale" data-placement="center" data-template="partials/shift-edit.html" bs-modal="modal">
+						<button class="btn btn-default" data-animation="am-fade-and-scale" data-template="partials/shift-edit.html" bs-modal="modal">
 							<span class="glyphicon glyphicon-edit"></span>
 						</button>
-						<button class="btn btn-default" data-animation="am-fade-and-scale" data-placement="center" data-template="partials/shift-delete.html" bs-modal="modal">
+						<button class="btn btn-default" data-animation="am-fade-and-scale" data-template="partials/shift-delete.html" bs-modal="modal">
 							<span class="glyphicon glyphicon-remove"></span>
 						</button>
 					</div>
