--- a/partials/directive-partials/header-banner.html
+++ b/partials/directive-partials/header-banner.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<h1 class="col-md-6 col-sm-6">{{properties.currentApp}}</h1>
 			<div class="col-md-6 col-sm-6">
-				<img data-ng-src="{{properties.currentUser.employeeInfo.Picture}}" fallback-src="/media/missing.png" class="pull-right img-circle" data-ng-style="{'max-width': '120px', 'max-height': '170px'}">
+				<img data-ng-src="{{properties.currentUser.Picture}}" fallback-src="/media/missing.png" class="pull-right img-circle" data-ng-style="{'max-width': '120px', 'max-height': '170px'}">
 			</div>
 		</div>
 	</div>
