--- a/partials/schedule/availableShifts/shift-delete.html
+++ b/partials/schedule/availableShifts/shift-delete.html
@@ -1,5 +1,5 @@
-<div class="modal" tabindex="-1" role="dialog">
-	<div class="modal-dialog">
+<div class="modal" tabindex="-1" role="dialog" data-ng-controller="ShiftEditCtrl as shiftCtrl">
+	<div class="modal-dialog text-muted text-left">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" ng-click="$hide()">&times;</button>
@@ -7,12 +7,12 @@
 			</div>
 			<div class="modal-body">
 				<div class="row">
-					<div class="warning">Are you sure you want to delete this shift?</div>
+					<div class="warning text-center">Are you sure you want to delete this shift?</div>
 				</div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-success" ng-click="$hide()">No</button>
-				<button type="button" class="btn btn-danger" ng-click="shift.deactivate(); $hide()">Yes</button>
+				<button type="button" class="btn btn-danger" ng-click="shiftCtrl.deactivateShift(); $hide()">Yes</button>
 			</div>
 		</div>
 	</div>
