--- a/partials/schedule/availableShifts/shift-take.html
+++ b/partials/schedule/availableShifts/shift-take.html
@@ -1,5 +1,5 @@
-<div class="modal" tabindex="-1" role="dialog" ng-controller="ShiftEditCtrl as shiftCtrl">
-	<div class="modal-dialog">
+<div class="modal" tabindex="-1" role="dialog" data-ng-controller="ShiftEditCtrl as shiftCtrl">
+	<div class="modal-dialog text-muted text-left">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" ng-click="$hide()">&times;</button>
@@ -7,7 +7,7 @@
 			</div>
 			<div class="modal-body">
 				<div class="row">
-					<div class="warning">Are you sure you want to work this shift?</div>
+					<div class="warning text-center">Are you sure you want to work this shift?</div>
 				</div>
 			</div>
 			<div class="modal-footer">
