Consolidate to one available shifts controller

--- a/partials/schedule/availableShifts/shift-add.html
+++ b/partials/schedule/availableShifts/shift-add.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" role="dialog" data-ng-controller="ShiftCreationCtrl as shiftCtrl">
+<div class="modal" tabindex="-1" role="dialog" data-ng-controller="ShiftEditCtrl as shiftCtrl">
 	<div class="modal-dialog text-muted text-left">
 		<div class="modal-content">
 			<div class="modal-header">
