--- a/partials/schedule/mySchedule/my-schedule.html
+++ b/partials/schedule/mySchedule/my-schedule.html
@@ -18,32 +18,9 @@
 						{{day.date | date:'d'}}
 				</span>
 						<div class="btn-group-vertical my-schedule">
-							<button data-ng-hide="shift.subCovered" data-ng-disabled="day.past" data-ng-class="{
-								subRequested: shift.subRequest,
-								week2: week.title === 'Week 2',
-								week3: week.title === 'Week 3',
-								subCovered: day.past
-							}" class="btn my-schedule" data-ng-repeat="shift in day.myShifts.currentSemester" data-animation="am-fade-and-scale" data-template="partials/schedule/mySchedule/sub-request.html" bs-modal="modal">
-								{{week.title}} - {{shift.shift.StartTime | date:'h:mm a'}} - {{shift.shift.EndTime | date:'h:mm a'}}
-							</button>
-							<!-- 							<button
-								data-ng-show="shift.isSubShift"
-								data-ng-disabled="day.past"
-								data-ng-class="{
-									subRequested: shift.subRequested,
-									week2: week.title === 'Week 2',
-									week3: week.title === 'Week 3',
-									subCovered: day.past
-								}"
-								class="btn my-schedule"
-								data-ng-repeat="shift in day.myShifts.currentSemester"
-								data-animation="am-fade-and-scale"
-								data-template="partials/schedule.request-sub.html"
-								bs-modal="modal"
-							>
+							<button data-ng-hide="shift.subCovered" data-ng-disabled="day.past" data-ng-class="{ subRequested: shift.subRequest, week2: week.title === 'Week 2', week3: week.title === 'Week 3', subCovered: day.past }" class="btn my-schedule" data-ng-repeat="shift in day.myShifts.currentSemester" data-animation="am-fade-and-scale" data-template="partials/schedule/mySchedule/sub-request.html" bs-modal="modal">
 								{{shift.shift.StartTime | date:'h:mm a'}} - {{shift.shift.EndTime | date:'h:mm a'}}
 							</button>
- -->
 						</div>
 					</td>
 				</tr>
@@ -51,6 +28,3 @@
 		</table>
 	</div>
 </div>
-<!-- <pre class="pre-scrollable">{{arrays.weeks | json}}</pre> -->
-
-<!-- data-ng-class="schedule.isToday(day.date)" -->
