--- a/partials/schedule/availability/availability.html
+++ b/partials/schedule/availability/availability.html
@@ -20,7 +20,7 @@
                     <div class="panel-body">
                         <div data-ng-repeat="employee in arrays.noAvailabilityEmployees | orderBy:'PreferredName'" class="col-sm-4 col-md-2 text-center well" style="height: 180px">
                             <div>
-                                <img data-ng-src="{{employee.Picture}}" fallback-src="/media/missing.png" class="img-circle" data-ng-style="{'max-width': '120px', 'max-height': '170px'}" data-template="partials/schedule.employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
+                                <img data-ng-src="{{employee.Picture}}" fallback-src="/media/missing.png" class="img-circle" data-ng-style="{'max-width': '120px', 'max-height': '170px'}" data-template="partials/schedule/employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
                             </div>
                             <b>{{employee.PreferredName}} {{employee.LastName}}</b>
                         </div>
@@ -45,7 +45,7 @@
                                 </div>
                                 <a class="list-group-item list-group-item-success" data-ng-repeat="employee in shift.Employees">
                                     <div>
-                                        <img data-ng-src="{{employee.Picture}}" fallback-src="/media/missing.png" class="list-item img-circle" data-template="partials/schedule.employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
+                                        <img data-ng-src="{{employee.Picture}}" fallback-src="/media/missing.png" class="list-item img-circle" data-template="partials/schedule/employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
                                     </div>
                                     {{employee.FirstName}} {{employee.LastName}}
                                 </a>
