--- a/partials/schedule/myAvailability/availability-edit.html
+++ b/partials/schedule/myAvailability/availability-edit.html
@@ -28,6 +28,7 @@
 					</div>
 					<div class="col-md-1"></div>
 				</div>
+				<buffer></buffer>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" ng-click="$hide()">Cancel</button>
