--- a/partials/schedule/schedule/employee-change.html
+++ b/partials/schedule/schedule/employee-change.html
@@ -12,7 +12,7 @@
 						<h3 data-ng-bind-html="employee.Shift.toString().replace(ctrl.breakRegex, '<br />')"></h3>
 					</div>
 					<div class="row">
-						<img data-ng-src="{{employee.Info.Picture}}" fallback-src="/media/missing.png" class="img-circle" data-template="partials/schedule.employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip" data-ng-click="$log.log(shift)">
+						<img data-ng-src="{{employee.Info.Picture}}" fallback-src="/media/missing.png" class="img-circle" data-template="partials/schedule/employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip" data-ng-click="$log.log(shift)">
 					</div>
 					<div class="row">
 						<h3>{{employee.Info.FirstName}} {{employee.Info.LastName}}</h3>
