Add refresh the the "my" views

--- a/partials/schedule/schedule.html
+++ b/partials/schedule/schedule.html
@@ -6,7 +6,7 @@
 					<a ui-sref="main.schedule.today" data-ng-click="ctrl.partialChange()">Today</a>
 				</li>
 				<li data-match-route="/main/schedule/schedule" data-ng-show="properties.extendedPrivledges">
-					<a ui-sref="main.schedule.schedule.this-semester" data-ng-click="ctrl.partialChange()">Schedule</a>
+					<a ui-sref="main.schedule.schedule" data-ng-click="ctrl.partialChange()">Schedule</a>
 				</li>
 				<li data-match-route="/main/schedule/availability" data-ng-show="properties.extendedPrivledges || properties.currentUser.Position === 'Coordinator'">
 					<a ui-sref="main.schedule.availability" data-ng-click="ctrl.partialChange()">Availability</a>
