--- a/partials/schedule/mySchedule/my-schedule.html
+++ b/partials/schedule/mySchedule/my-schedule.html
@@ -1,30 +1,35 @@
 <div class="container-fluid">
 	<buffer></buffer>
 	<div class="row-fluid">
-		<table class="table table-bordered">
-			<thead>
-				<tr>
-					<th data-ng-repeat="day in arrays.weeks[0].days" class="text-center" data-ng-class="{ weekend: day.weekend }">
-						<div>
-							{{day.title}}
-						</div>
-					</th>
-				</tr>
-			</thead>
-			<tbody data-ng-repeat="week in arrays.weeks">
-				<tr>
-					<td data-ng-repeat="day in week.days" class="text-center my-schedule" data-ng-class="{ weekend: day.weekend }">
-						<span class="pull-right">
+		<div class="col-md-2">
+			<refresh></refresh>
+		</div>
+		<div class="col-md-10">
+			<table class="table table-bordered">
+				<thead>
+					<tr>
+						<th data-ng-repeat="day in arrays.weeks[0].days" class="text-center" data-ng-hide="day.title === 'Sunday'" data-ng-class="{ weekend: day.weekend }">
+							<div>
+								{{day.title}}
+							</div>
+						</th>
+					</tr>
+				</thead>
+				<tbody data-ng-repeat="week in arrays.weeks">
+					<tr>
+						<td data-ng-repeat="day in week.days" class="text-center my-schedule" data-ng-hide="day.title === 'Sunday'" data-ng-class="{ weekend: day.weekend }">
+							<span class="pull-right">
 						{{day.date | date:'d'}}
 				</span>
-						<div class="btn-group-vertical my-schedule">
-							<button data-ng-hide="shift.subCovered" data-ng-disabled="day.past" data-ng-class="{ subRequested: shift.subRequest, week2: week.title === 'Week 2', week3: week.title === 'Week 3', subCovered: day.past }" class="btn my-schedule" data-ng-repeat="shift in day.myShifts.currentSemester" data-animation="am-fade-and-scale" data-template="partials/schedule/mySchedule/sub-request.html" bs-modal="modal">
-								{{shift.shift.StartTime | date:'h:mm a'}} - {{shift.shift.EndTime | date:'h:mm a'}}
-							</button>
-						</div>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+							<div class="btn-group-vertical my-schedule">
+								<button data-ng-hide="shift.subCovered" data-ng-disabled="day.past" data-ng-class="{ subRequested: shift.subRequest, week2: week.title === 'Week 2', week3: week.title === 'Week 3', subCovered: day.past }" class="btn my-schedule" data-ng-repeat="shift in day.myShifts.currentSemester" data-animation="am-fade-and-scale" data-template="partials/schedule/mySchedule/sub-request.html" bs-modal="modal">
+									{{shift.shift.StartTime | date:'h:mm a'}} - {{shift.shift.EndTime | date:'h:mm a'}}
+								</button>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
