Update the "my" views to support semesters

--- a/partials/schedule/myAvailability/my-availability.html
+++ b/partials/schedule/myAvailability/my-availability.html
@@ -7,6 +7,8 @@
             <button type="button" class="btn btn-default form-control" bs-modal="modal" data-template="partials/schedule/myAvailability/unavailable.html" data-animation="am-fade-and-scale">
                 Unavailable
             </button>
+            <buffer></buffer>
+            <filter-semesters></filter-semesters>
         </div>
         <div class="col-md-10">
             <table class="table table-bordered">
