--- a/partials/schedule/mySchedule/my-schedule.html
+++ b/partials/schedule/mySchedule/my-schedule.html
@@ -3,6 +3,8 @@
 	<div class="row-fluid">
 		<div class="col-md-2">
 			<refresh></refresh>
+			<buffer></buffer>
+			<filter-semesters></filter-semesters>
 		</div>
 		<div class="col-md-10">
 			<table class="table table-bordered">
