Add icon to refresh button

--- a/partials/directive-partials/refresh.html
+++ b/partials/directive-partials/refresh.html
@@ -1,1 +1,4 @@
-<button type="button" class="btn btn-default form-control" data-ng-click="ctrl.refreshContent()">Refresh</button>
+<button type="button" class="btn btn-default form-control" data-ng-click="ctrl.refreshContent()">
+	<span class="glyphicon glyphicon-refresh"></span>
+	Refresh
+</button>
