Update messages to support objects and Modularize

--- a/partials/main.html
+++ b/partials/main.html
@@ -39,7 +39,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li data-ng-show="properties.currentUser.Active">
-						<a href="" bs-aside="aside" data-template="partials/messages.html" data-placement="right" data-animation="am-fade-and-slide-right" data-container="body">
+						<a href="" bs-aside="aside" data-template="partials/message/messages.html" data-placement="right" data-animation="am-fade-and-slide-right" data-container="body">
 							<span class="glyphicon glyphicon-envelope"></span><span data-ng-show="properties.unreadMessages > 0" class="badge badge-error">{{properties.unreadMessages}}</span>
 						</a>
 					</li>
